tests/NormalTests/paczka1/fuzzy1/78721712.err
Error in line 2: qjV2 A878 54,9
Error in line 13: BFD S582 98,6
Error in line 3: XmmjJQ6AVT S120 87,4
Error in line 17: XmmjJQ6AVT S582 68,1
Error in line 21: XmmjJQ6AVT A18 80,4
Error in line 24: qjV2 S120 111,31
Error in line 15: BFD A18 95,3
Error in line 28: KA878
Error in line 12: qjV2 S120 22,3
Error in line 25: 7Pw S582 84,3
Error in line 27: BFD A878 15,6
Error in line 33: 7t8MeBjOYPi S120 99,6
Error in line 38: qjV2 S120 77,4
